mobile compatibility update

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
-              src="./assets/png/github-ico.png"
+              src="./assets/png/github-ico2.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -365,7 +365,7 @@
               <a target="_blank" rel="noreferrer" href="https://github.com/justinknguyen">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
-                  src="./assets/png/github-ico.png"
+                  src="./assets/png/github-ico2.png"
                   alt="icon"
                 />
               </a>
