--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Hi, I'm Justin and thank you for your interest! This website showcases my skillset, 
+            projects, and my hobby with custom keyboards!
           </span>
         </h2>
         <div class="about__content">
@@ -159,21 +159,31 @@
             <h3 class="about__content-title">Get to know me!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
-                Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
-                <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
-                with talented people to create
-                <strong>digital products </strong>
-                for both business and consumer use.
+                My name is 
+                <strong>Justin Nguyen</strong>
+                and I'm an <strong> Electical & Software Engineer </strong> located in
+                Calgary, Alberta. I finished my B.Sc in Electrical Engineering, and
+                I'm now pursuing a M.Eng in Software Engineering with an expected graduation date
+                of April 2023. 
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
-                <strong>contact</strong> me here.
+              During my internship I worked at NOVA Chemicals as a <strong>project manager</strong> 
+                for Instrument & Control and Electrical projects. I've recently completed my externship at MakeSens Inc.
+                where I worked as a <strong>PCB designer</strong> and <strong>software developer</strong>. 
+                I designed a new sensor board and helped develop the Android app.
+              </p>
+              <p class="about__content-details-para">
+                I love creating and designing <strong>microcontroller projects</strong>
+                as a hobby, and I was able to apply that knowledge and passion to my work experience. 
+                I've also expanded this hobby towards <strong>custom mechanical keyboards</strong>, 
+                which I love to build and share! I aspire to create and design my own custom keyboard soon!
+              </p>
+              <p class="about__content-details-para">
+                Fun fact, this website is hosted on my Raspberry Pi 4 Model B. You can view the steps
+                I've gone through on my
+                <a rel="noreferrer" href="https://github.com/justinknguyen/PiGuide" target="_blank">
+                  Github repo</a>
+                along with guides for many other applications!
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -183,18 +193,22 @@
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
+              <div class="skills__skill">C</div>
+              <div class="skills__skill">Java</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">Matlab</div>
+              <div class="skills__skill">MIPS Assembly</div>
+              <div class="skills__skill">VHDL</div>
+              <div class="skills__skill">Android</div>
+              <div class="skills__skill">iOS</div>
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
-              <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
-              <div class="skills__skill">SASS</div>
-              <div class="skills__skill">GIT</div>
-              <div class="skills__skill">Shopify</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">IoT</div>
+              <div class="skills__skill">Github</div>
+              <div class="skills__skill">Altium</div>
+              <div class="skills__skill">Arduino</div>
+              <div class="skills__skill">Raspberry Pi</div>
+
             </div>
           </div>
         </div>
@@ -208,8 +222,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Under construction.
           </span>
         </h2>
 
@@ -297,12 +310,15 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            I'd love to hear from you so please reach out to me! Be it opportunities or casual
+            conversations, I'm willing to talk about anything.
           </span>
         </h2>
         <div class="contact__form-container">
-          <form action="#" class="contact__form">
+          <form
+            action="https://formspree.io/f/xvoyzgnp"
+            method="POST"
+            class="contact__form">
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
               <input
@@ -382,10 +398,13 @@
 
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
+          &copy; Copyright 2022. Made by
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
             >Ram Maheshwari</a
-          >
+          > modified by
+          <a rel="noreferrer" target="_blank" href="https://justinknguyen.ca"
+            >Justin Nguyen</a
+          >.
         </div>
       </div>
     </footer>
