added 4th project

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
               <p class="about__content-details-para">
                 Fun fact, this website is hosted on my Raspberry Pi 4 Model B. You can view the steps
                 I've gone through on my
-                <a rel="noreferrer" href="https://github.com/justinknguyen/PiGuide" target="_blank">
-                  Github repo</a>
+                <u><a rel="noreferrer" href="https://github.com/justinknguyen/PiGuide" target="_blank">
+                  Github repo</a></u>
                 along with guides for many other applications!
               </p>
             </div>
@@ -299,6 +299,30 @@
               >
             </div>
           </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/jpeg/project-mockup-example.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Project 4</h3>
+              <p class="projects__row-content-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                facilis tempora, explicabo quae quod deserunt eius sapiente
+                praesentium.
+              </p>
+              <a
+                href="./project-4.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -390,8 +414,8 @@
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">Justin Nguyen</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              M.Eng Software Engineering student with a background in Electrical Engineering. Always willing
+              to learn and improve my skillset.
             </p>
           </div>
         </div>
