--- a/index.html
+++ b/index.html
@@ -222,104 +222,108 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Under construction.
+            Below are a list of <strong>personal</strong> projects I've recently done 
+            outside of school and work. You can view my 
+            <u><a rel="noreferrer" href="https://github.com/justinknguyen" target="_blank">
+              Github</a></u>
+            if you'd like to see more of my work.
           </span>
         </h2>
 
         <div class="projects__content">
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <img
+              <!-- <img
                 src="./assets/jpeg/project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
-              />
+              /> -->
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">IoT Notification</h3>
               <p class="projects__row-content-desc">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
                 facilis tempora, explicabo quae quod deserunt eius sapiente
                 praesentium.
               </p>
               <a
-                href="./project-1.html"
+                rel="noreferrer" href="https://github.com/justinknguyen/IoT-Projects/blob/main/ESP32%20-%20Dinner/Dinner_ESP32.ino"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Repo Link</a
               >
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <img
+              <!-- <img
                 src="./assets/jpeg/project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
-              />
+              /> -->
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 2</h3>
+              <h3 class="projects__row-content-title">iOS Messaging App</h3>
               <p class="projects__row-content-desc">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
                 facilis tempora, explicabo quae quod deserunt eius sapiente
                 praesentium.
               </p>
               <a
-                href="./project-2.html"
+                rel="noreferrer" href="https://github.com/justinknguyen"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Repo Link</a
               >
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <img
+              <!-- <img
                 src="./assets/jpeg/project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
-              />
+              /> -->
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
+              <h3 class="projects__row-content-title">100 Prisoners Riddle</h3>
               <p class="projects__row-content-desc">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
                 facilis tempora, explicabo quae quod deserunt eius sapiente
                 praesentium.
               </p>
               <a
-                href="./project-3.html"
+                rel="noreferrer" href="https://github.com/justinknguyen/prisoner-riddle"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Repo Link</a
               >
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <img
+              <!-- <img
                 src="./assets/jpeg/project-mockup-example.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
-              />
+              /> -->
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 4</h3>
+              <h3 class="projects__row-content-title">PiGuide</h3>
               <p class="projects__row-content-desc">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
                 facilis tempora, explicabo quae quod deserunt eius sapiente
                 praesentium.
               </p>
               <a
-                href="./project-4.html"
+                rel="noreferrer" href="https://github.com/justinknguyen/PiGuide"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Repo Link</a
               >
             </div>
           </div>
