--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
           <p class="text-primary">
             Electrical Engineer | Software Engineer
           </p>
+          <p class="text-primary">
+            (Under Construction)
+          </p>
         </div>
         <div class="home-hero__cta">
           <a href="./#projects" class="btn btn--bg">Projects</a>
@@ -230,12 +233,13 @@
             <div class="projects__content">
               <div class="projects__row">
                 <div class="projects__row-img-cont">
-                  <!-- <img
-                    src="./assets/jpeg/project-mockup-example.jpeg"
+                  <img
+                    src="./assets/png/iot-1.png"
                     alt="Software Screenshot"
                     class="projects__row-img"
                     loading="lazy"
-                  /> -->
+                    style="width: 50%; position: relative; left: 50%; transform: translateX(-50%);"
+                  />
                 </div>
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">IoT Notification Button</h3>
@@ -257,11 +261,11 @@
               <div class="projects__row">
                 <div class="projects__row-img-cont">
                   <img
-                    src="./assets/jpeg/ios-ss.jpeg"
+                    src="./assets/jpeg/ios-ss1.jpg"
                     alt="Software Screenshot"
                     class="projects__row-img"
                     loading="lazy"
-                    style="width: 40%; position: relative; left: 30%;"
+                    style="width: 70%; position: relative; left: 50%; transform: translateX(-50%);"
                   />
                 </div>
                 <div class="projects__row-content">
@@ -286,8 +290,7 @@
                     alt="Software Screenshot"
                     class="projects__row-img"
                     loading="lazy"
-                    style="width: 90%;"
-
+                    style="width: 80%; position: relative; left: 50%; transform: translateX(-50%);"
                   />
                 </div>
                 <div class="projects__row-content">
@@ -314,7 +317,7 @@
                     alt="Software Screenshot"
                     class="projects__row-img"
                     loading="lazy"
-                    style="width: 100%;"
+                    style="width: 100%; position: relative; left: 50%; transform: translateX(-50%);"
                   />
                 </div>
                 <div class="projects__row-content">
@@ -356,6 +359,7 @@
                     alt="Software cScreenshot"
                     class="projects__row-img"
                     loading="lazy"
+                    style="width: 100%; position: relative; left: 50%; top: 10%; transform: translateX(-50%);"
                   />
                 </div>
                 <div class="projects__row-content">
@@ -376,12 +380,13 @@
               </div>
               <div class="projects__row">
                 <div class="projects__row-img-cont">
-                  <!-- <img
-                    src="./assets/jpeg/project-mockup-example.jpeg"
+                  <img
+                    src="./assets/png/pickit.png"
                     alt="Software Screenshot"
                     class="projects__row-img"
                     loading="lazy"
-                  /> -->
+                    style="width: 100%; position: relative; left: 50%; transform: translateX(-50%);"
+                  />
                 </div>
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">PICKIT</h3>
@@ -400,12 +405,13 @@
               </div>
               <div class="projects__row">
                 <div class="projects__row-img-cont">
-                  <!-- <img
-                    src="./assets/jpeg/project-mockup-example.jpeg"
+                  <img
+                    src="./assets/png/pikabot.png"
                     alt="Software Screenshot"
                     class="projects__row-img"
                     loading="lazy"
-                  /> -->
+                    style="width: 45%; position: relative; left: 50%; transform: translateX(-50%);"
+                  />
                 </div>
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">Parallax Robot</h3>
@@ -425,19 +431,20 @@
               </div>
               <div class="projects__row">
                 <div class="projects__row-img-cont">
-                  <!-- <img
-                    src="./assets/jpeg/project-mockup-example.jpeg"
+                  <img
+                    src="./assets/png/waves.png"
                     alt="Software Screenshot"
                     class="projects__row-img"
                     loading="lazy"
-                  /> -->
+                    style="width: 120%; height: 100%; position: relative; left: 50%; transform: translateX(-50%);"
+                  />
                 </div>
                 <div class="projects__row-content">
                   <h3 class="projects__row-content-title">Wave Generation & Modulation</h3>
                   <p class="projects__row-content-desc">
                     Utilizing <strong>VHDL</strong> in ENGG 453, I programmed a DE10-Lite FPGA board in Quartus Prime. 
                     The goal was to generate various waveforms with variable amplitude and frequency. With the use of a distance sensor and voltmeter,
-                    you were able to perform frequency and amplitude modulation. The modulation was then represented through a buzzer with output of
+                    we were able to perform frequency and amplitude modulation. The modulation was then represented through a buzzer with an output of
                     differing pitch and loudness accordingly.
                   </p>
                   <a
