--- a/keyboards.html
+++ b/keyboards.html
@@ -149,8 +149,9 @@
                 <li>Form Factor: 60% HHKB</li>
                   <li>Plate: Aluminum</li>
                   <li>PCB: Hotswap</li>
-                  <li>Switches: Durock Dolphin (Silent)</li>
+                  <li>Switches: Black Sesame</li>
                   <li>Stabilizers: Owlab</li>
+                  <li>Keycaps: GMK Iceberg</li>
               </ul>
               <a
                 rel="noreferrer" href="https://www.ashkeebs.com/product/qwertykeys-qk60-keyboard-wk/"
@@ -179,6 +180,7 @@
                   <li>PCB: Hotswap</li>
                   <li>Switches: Gateron Oil King</li>
                   <li>Stabilizers: Owlab</li>
+                  <li>Keycaps: GMK WoB</li>
               </ul>
               <a
                 rel="noreferrer" href="https://qwertykeys.notion.site/QK65-Restock-Sale-Info-3410a664b55a4970873a7d9d3f440817"
@@ -208,6 +210,7 @@
                       <li>PCB: Hotswap | Solder</li>
                       <li>Switches: Alpaca V2 | Boba U4T</li>
                       <li>Stabilizers: C3 | Everglide</li>
+                      <li>Keycaps: GMK Oblivion</li>
                   </ul>
                 <a
                   rel="noreferrer" href="https://geekhack.org/index.php?topic=111841.0"
@@ -231,10 +234,11 @@
                 <h3 class="projects__row-content-title">Iron180</h3>
                 <ul class="projects__row-content-desc">
                   <li>Form Factor: TKL</li>
-                    <li>Plate: Brass | Carbon Fiber</li>
+                    <li>Plate: Carbon Fiber | Brass</li>
                     <li>PCB: Solder | Solder</li>
-                    <li>Switches: YOK Holy Panda | Gateron Black Inks v2</li>
-                    <li>Stabilizers: Everglide | TX</li>
+                    <li>Switches: Gateron Black Inks | YOK Holy Panda</li>
+                    <li>Stabilizers: TX | Everglide</li>
+                    <li>Keycaps: GMK Minimal</li>
                 </ul>
                 <a
                   rel="noreferrer" href="https://geekhack.org/index.php?topic=105245.0"
@@ -262,7 +266,8 @@
                     <li>Plate: FR4</li>
                     <li>PCB: Hotswap</li>
                     <li>Switches: T1</li>
-                    <li>Stabilizers: Everglide</li>
+                    <li>Stabilizers: TX</li>
+                    <li>Keycaps: KAT Refined</li>
                 </ul>
                 <a
                   rel="noreferrer" href="https://www.cftkb.com/shop/mysterium-tkl-diy-keyboard-kit"
@@ -288,8 +293,9 @@
                   <li>Form Factor: 65%</li>
                     <li>Plate: Brass</li>
                     <li>PCB: Hotswap</li>
-                    <li>Switches: POM Holy Panda + Boba U4T</li>
-                    <li>Stabilizers: Everglide</li>
+                    <li>Switches: Boba U4T</li>
+                    <li>Stabilizers: Owlab</li>
+                    <li>Keycaps: ePBT Japanese Gray</li>
                 </ul>
                 <a
                   rel="noreferrer" href="https://www.cftkb.com/shop/discipline"
