--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
             <a href="./index.html#about" class="header__link">About </a>
           </li>
           <li class="header__link-wrapper">
-            <a href="./index.html#projects" class="header__link">
-              Projects
-            </a>
+            <a href="./index.html#references" class="header__link">References </a>
           </li>
           <li class="header__link-wrapper">
-            <a href="./keyboards.html" class="header__link">Keyboards</a>
+            <a href="./index.html#projects" class="header__link">Projects </a>
+          </li>
+          <li class="header__link-wrapper">
+            <a href="./keyboards.html" class="header__link">Keyboards </a>
           </li>
           <li class="header__link-wrapper">
             <a href="./index.html#contact" class="header__link"> Contact </a>
@@ -63,6 +64,10 @@
 
           <li class="header__sm-menu-link">
             <a href="./index.html#about"> About </a>
+          </li>
+
+          <li class="header__sm-menu-link">
+            <a href="./index.html#references"> References </a>
           </li>
 
           <li class="header__sm-menu-link">
@@ -227,7 +232,7 @@
       <h2 class="heading heading-sec heading-sec__mb-bg">
         <span class="heading-sec__main">References</span>
         <span class="heading-sec__sub">
-          Below are a list of my references obtained from past work experiences.
+          Below are a list of references obtained from past work experiences.
           You can view the references on my
           <u><a rel="noreferrer" href="https://www.linkedin.com/in/justin-kyle-nguyen/" target="_blank">
               LinkedIn</a></u>.
@@ -260,7 +265,7 @@
               coming up with ideas on how to make the software perform well while being robust in varying real life
               scenarios. I would wholeheartedly recommend Justin for other software work where creativity and problem
               solving are required."
-              - Erick Nickel
+              - Eric Nickel
             </p>
             <a rel="noreferrer" href="https://www.linkedin.com/in/ericnickel/"
               class="btn btn--med btn--theme dynamicBgClr" target="_blank">LinkedIn</a>
