--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="mouse"></div>
     </div>
   </section>
-  <!-- /END Hero Section -->
+  <!-- END Hero Section -->
 
   <!-- **** About Section of Homepage **** -->
   <section id="about" class="about sec-pad">
@@ -226,6 +226,7 @@
   </section>
   <!-- END About Section -->
 
+  <!-- **** References Section of Homepage **** -->
   <section id="references" class="references sec-pad">
     <div class="main-container">
 
@@ -243,7 +244,8 @@
         <div class="references__row">
 
           <div class="references__row-content">
-            <h3 class="references__row-content-title">Allen Sandwell <br> MakeSens - Chief Technical Officer</h3>
+            <h3 class="references__row-content-title">Allen Sandwell</h3>
+            <h4 class="references__row-content-subtitle">Chief Technical Officer at MakeSens</h4>
             <p class="references__row-content-desc">
               "Justin worked for us in the summer of 2022 as a full stack developer for our DynaSens remote sensing and
               monitoring technology.
@@ -257,7 +259,8 @@
               class="btn btn--med btn--theme dynamicBgClr" target="_blank">LinkedIn</a>
           </div>
           <div class="references__row-content">
-            <h3 class="references__row-content-title">Eric Nickel <br> MacDon - Engineering Simulation Specialist</h3>
+            <h3 class="references__row-content-title">Eric Nickel</h3>
+            <h4 class="references__row-content-subtitle">Engineering Simulation Specialist at MacDon</h4>
             <p class="references__row-content-desc">
               "Justin worked on a software capstone project for us in early 2023. In this project he showed good
               competence in OpenCV, Python, and used ROS2 to tie multiple programs together on a computer vision
@@ -275,6 +278,7 @@
       </div>
     </div>
   </section>
+  <!-- END References Section -->
 
   <!-- **** Projects Section of Homepage **** -->
   <section id="projects" class="projects sec-pad">
