nav fix in keyboard section

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="skills__skill">OpenCV</div>
             <div class="skills__skill">NumPy</div>
             <div class="skills__skill">Pandas</div>
-            <div class="skills__skill">Scikit-learn</div>
+            <div class="skills__skill">scikit-learn</div>
 
             <div class="skills__skill">Machine Learning</div>
             <div class="skills__skill">Deep Learning</div>
