--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
       <div class="home-hero__info">
         <p class="text-primary">
-          Software & Electrical Engineer Graduate
+          Software & Electrical Engineer
         </p>
       </div>
       <div class="home-hero__cta">
@@ -147,15 +147,17 @@
             <p class="about__content-details-para">
               My name is
               <strong>Justin Nguyen</strong>
-              and I'm a <strong> Software & Electrical Engineer </strong> located in
+              and I'm a <strong>Software & Electrical Engineer</strong> located in
               Calgary, Alberta. I hold a B.Sc. in Electrical Engineering and
               a M.Eng. in Software Engineering.
             </p>
             <p class="about__content-details-para">
               During my co-op, I worked at NOVA Chemicals as a <strong>project manager</strong>
               for electrical and instrumentation & control projects. Additionally, I completed an externship at
-              MakeSens where I took on roles as a <strong>hardware engineer</strong> and a
-              <strong>software engineer</strong>, designing a new sensor board and developing the Android app.
+              MakeSens where I took on roles as a <strong>Hardware Engineer</strong> and a
+              <strong>Software Engineer</strong>, designing a new sensor board and developing the Android app.
+              I'm now working as a full-time <strong>Software Engineer</strong> at eCapital Corp., doing full stack development
+              in a fast-paced environment.
             </p>
             <p class="about__content-details-para">
               I love creating and designing <strong>microcontroller projects</strong>
